# advent-of-code-2021

./: LICENSE  README.md  advent-of-code.cabal  package.json
app/: Main.hs
app/_playground/: PlaygroundMain.hs  StartingOut.hs  data.txt
app/day-1/: Day1.hs
app/day-10/: day10.js
app/day-11/: day11.js
app/day-12/: day12.js
app/day-13/: day13.js
app/day-2/: Day2.hs
app/day-2/js-solution-2/: day2.js
app/day-6/js-solution-1/: day6.js
app/day-7/: day7.js  input.js
app/day-8/: day8.js  input.js
app/day-X/: dayX.js
app/day-X-template/: DayX.hs
app/js-utils/: js-utils.js
app/utils/: FileUtil-test.hs  FileUtil.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
