cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
author:             jesus-real
maintainer:         jesus-real

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Day1 Day2 FileUtil

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app 
                      app/day-1 
                      app/day-2
                      app/utils
    default-language: Haskell2010

executable playground
    main-is:         _playground/PlaygroundMain.hs

    -- Modules included in this executable, other than Main.
    other-modules: StartingOut FileUtil

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app 
                      app/_playground 
                      app/utils
    default-language: Haskell2010

